--- a/Formalys/war/WEB-INF/web.xml
+++ b/Formalys/war/WEB-INF/web.xml
@@ -7,13 +7,13 @@
 
 	<!-- Servlets -->
 	<servlet>
-		<servlet-name>greetServlet</servlet-name>
-		<servlet-class>com.excilys.formation.formalys.server.GreetingServiceImpl</servlet-class>
+		<servlet-name>trainingServlet</servlet-name>
+		<servlet-class>com.excilys.formation.formalys.server.TrainingServiceImpl</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>greetServlet</servlet-name>
-		<url-pattern>/formalys/greet</url-pattern>
+		<servlet-name>trainingServlet</servlet-name>
+		<url-pattern>/formalys/training</url-pattern>
 	</servlet-mapping>
 
 	<!-- Default page to serve -->
